--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-login-page": "^1.0.4",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7"
   },
