--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
+    "@mui/x-charts": "^7.27.1",
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
