--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.27.1",
+    "@mui/x-date-pickers": "^7.27.3",
+    "@vis.gl/react-google-maps": "^1.5.2",
+    "commonjs": "^0.0.1",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.3.19",
+    "google-maps-react": "^2.0.6",
     "lucide-react": "^0.417.0",
+    "mongodb": "^6.14.2",
     "react": "^18.3.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-login-page": "^1.0.4",
     "react-router-dom": "^6.25.1",
