--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.27.1",
     "@mui/x-date-pickers": "^7.27.3",
+    "@react-google-maps/api": "^2.20.6",
     "@vis.gl/react-google-maps": "^1.5.2",
+    "axios": "^1.8.3",
     "caniuse-lite": "^1.0.30001705",
     "commonjs": "^0.0.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.3.19",
-    "google-maps-react": "^2.0.6",
     "lucide-react": "^0.417.0",
     "mongodb": "^6.14.2",
     "react": "^18.3.1",
