--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-login-page": "^1.0.4",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7"
