--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-login-page": "^1.0.4",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
