--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.417.0",
     "mongodb": "^6.14.2",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.3.1",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-login-page": "^1.0.4",
     "react-router-dom": "^6.25.1",
+    "react-select": "^5.10.1",
     "recharts": "^2.12.7",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
